use github action check standard

--- a/README.Rmd
+++ b/README.Rmd
@@ -16,6 +16,7 @@ knitr::opts_chunk$set(
 # tnl
 
 <!-- badges: start -->
+[![R-CMD-check](https://github.com/ihababusaif/tnl/workflows/R-CMD-check/badge.svg)](https://github.com/ihababusaif/tnl/actions)
 <!-- badges: end -->
 
 The goal of tnl is to ...
