--- a/README.Rmd
+++ b/README.Rmd
@@ -17,6 +17,7 @@ knitr::opts_chunk$set(
 
 <!-- badges: start -->
 [![R-CMD-check](https://github.com/ihababusaif/tnl/workflows/R-CMD-check/badge.svg)](https://github.com/ihababusaif/tnl/actions)
+[![Codecov test coverage](https://codecov.io/gh/ihababusaif/tnl/branch/master/graph/badge.svg)](https://codecov.io/gh/ihababusaif/tnl?branch=master)
 <!-- badges: end -->
 
 The goal of tnl is to ...
